--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "3.3.1",
+    "@date-io/moment": "^1.3.5",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "history": "^4.9.0",
+    "jquery": "^3.4.0",
+    "lodash": "^4.17.11",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "^1.1.5",
-    "reactstrap": "^6.3.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
